--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "firebase": "^10.1.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "typescript": "5.1.6"
   }
 }
